Fixing div overlap bug, styling task card, new task button

--- a/html/generic_style.css
+++ b/html/generic_style.css
@@ -3,6 +3,7 @@ html{
     background-color: #fff;
 }
 
+
 /* Spacer Div*/
 .clr{
     clear:both;
@@ -17,13 +18,13 @@ div.body{
 div.header{
     width: 100%;
     background-color: #ccccff;
-    min-height: 96px;
+    min-height: 96px;     /* Fixed size : Check for responsiveness */
     border-radius: .8rem;
 }
 
 div.header_content_wrapper{
     margin: 4px 32px;
-    display: inline-block;
+    display: inline-block; 
 }
 
 div.header_word_wrapper{
@@ -118,6 +119,21 @@ button.blue_curve_button:hover{
     background-color:#4095c6;
 }
 
+.button_with_symbol{
+    position: absolute;
+    font-size:25px;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    border: 1px solid #9f9f9f33;
+    background-color: #fff;
+}
+
+.button_symbol_with_caption{
+    display:grid;
+    grid-template-columns: 3fr 1fr;
+    grid-auto-columns: auto;
+}
+
 /*Popups*/
 .bg-modal {
     width: 100%;
@@ -133,24 +149,41 @@ button.blue_curve_button:hover{
 
 /*Cards*/
 .header_type_card{
+    transform: translateY(2rem);   /* Adds 2rem space before one of these elements*/
     background-color:#fff;
     padding: 2rem;
-    box-shadow: 0 1.4rem 3rem #908f8f33;
+    /* box-shadow: 0 1.4rem 3rem #908f8f33; */
+    border: 1px solid #9f9f9f33;
     border-radius: .8rem;
     text-align: left;
-    transform: translateY(3rem);
     position: relative;
 }
 
 
 .centered_card{
+    transform: translateY(2rem); 
     background-color:#fff;
     margin: 0 auto;
     border-radius: 2rem;
     width: 60%;
     height: auto;
     padding: 1rem;
-    box-shadow: 0 1.4rem 8rem #908f8f33;
+    /* box-shadow: 0 1.4rem 8rem #908f8f33;  */
+    border: 1px solid #9f9f9f33;
+    position: relative;
+}
+
+.content_card{
+    transform: translateY(3rem);
+    background-color:#fff;
+    border-radius: 1rem;
+    width: 100%;
+    height: auto;
+    padding: 2rem;
+    position: relative;
+    text-align: left;
+    border: 1px solid #9f9f9f33;
+    box-shadow: 0 1.4rem 3rem #908f8f33; ;
 }
 
 
@@ -161,7 +194,6 @@ button.blue_curve_button:hover{
     max-width: 600px;
     max-height: 600px;
 }
-
 
 
 
@@ -204,10 +236,12 @@ div.dash_container{
 
 
 div.dash_project{
-    margin-left: 1%;
+    /* margin-left: 1%;
     margin-right: 1%;
     margin-top: 1%;
-    margin-bottom: 1%;
+    margin-bottom: 1%; */
+    margin: 1%;
+    border-radius: 2px;
     background-color: #9999cc;
     padding: 8px;
 }
@@ -300,20 +334,27 @@ td{
 
 
 /* Project page */
-#description_card {
-    transform: translateY(3rem);
+@media(min-width: 700px){
+    .body-flex-wrapper{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 1em;
+    }
 }
+
 
 div.description_content{
    padding: 0;
+   padding-bottom: 20px;
 }
 
 #edit_desc{
      text-align: right;
 }
 
+
 #charts{
-    transform: translateY(5rem);
+    transform: translateY(4rem);
     text-align: center;
 }
 
@@ -364,4 +405,16 @@ div.description_content{
     right: 30px;
 }
 
+#task_card{
+    transform: translateY(5rem);
+}
+
+#new_task_button{
+    right: 25px;
+    border-color: black;
+}
+
+#task_1{
+    transform: translateY(3rem);
+}
 
